# mcp_proxy

./: .gitignore  pyproject.toml  requirements.txt
src/mcp_proxy/: __init__.py
src/mcp_proxy/clients/: sse_client.py
src/mcp_proxy/models/: tool_override.py
src/mcp_proxy/servers/: override_server.py
src/mcp_proxy/tooling/: load_tools.py
